--- a/main.css
+++ b/main.css
@@ -1,3 +1,9 @@
+body {
+  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+  background-color: rgb(50, 49, 57);
+  color: antiquewhite;
+}
+
 div {
   margin: 20px 0px;
 }
