--- a/main.css
+++ b/main.css
@@ -2,6 +2,7 @@ body {
   font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
   background-color: rgb(50, 49, 57);
   color: antiquewhite;
+  padding: 20px 0px 0px 50px;
 }
 
 div {
