--- a/main.css
+++ b/main.css
@@ -2,10 +2,23 @@ body {
   font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
   background-color: rgb(50, 49, 57);
   color: antiquewhite;
-  padding: 20px 0px 0px 50px;
+  padding: 20px 50px 0px 50px;
 }
 
 .exercise-wrap {
   border-top: 4px solid antiquewhite;
   padding: 30px 20px;
+  margin: 0;
+}
+
+div {
+  margin: 16px 0px;
+}
+
+button {
+  margin-left: 10px;
+}
+
+input {
+  margin-left: 10px;
 }
