--- a/password.css
+++ b/password.css
@@ -13,6 +13,7 @@
   outline: none;
   border-radius: 5px;
   margin: 0;
+  margin-right: 10px;
 }
 
 .password-input:focus {
@@ -84,7 +85,7 @@
 
 .check-password-button {
   background-color: rgb(94, 28, 155);
-  color: white;
+  color: antiquewhite;
   border: none;
   border-radius: 5px;
   width: 100px;
