--- a/main.css
+++ b/main.css
@@ -14,12 +14,29 @@ body {
 div {
   margin: 16px 0px;
 }
+label {
+  margin-right: 10px;
+}
 
 button {
-  margin-left: 10px;
+  margin-right: 10px;
+  padding: 16px 24px;
+  border: none;
+  border-radius: 4px;
+  background-color: rgb(94, 28, 155);
+  color: antiquewhite;
+  cursor: pointer;
 }
 
 input {
-  margin-left: 10px;
-  padding-left: 8px;
+  margin: 10px 10px 10px 0px;
+
+  padding: 16px;
+  border: none;
+  border-radius: 4px;
+  outline: none;
+}
+
+.block-input {
+  display: block;
 }
